k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-nodejs-app
  namespace: my-secure-namespace  # Added namespace
  labels:
    app: devsecops-nodejs-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devsecops-nodejs-app
  template:
    metadata:
      labels:
        app: devsecops-nodejs-app
    spec:
      containers:
      - name: devsecops-nodejs-container
        image: muhammadwaqas366/devsecops-nodejs-app:latest  # Updated with your DockerHub username
        ports:
        - containerPort: 3000
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
      imagePullSecrets:
      - name: regcred  # Referencing the image pull secret
---
apiVersion: v1
kind: Service
metadata:
  name: devsecops-nodejs-service
  namespace: my-secure-namespace  # Added namespace
spec:
  selector:
    app: devsecops-nodejs-app
  ports:
  - protocol: TCP
    port: 80  # Expose the service on port 80
    targetPort: 3000  # Internally forward traffic to container port 3000
  type: LoadBalancer  # Exposes the app to the internet
